--- a/EXSquaredTestApp/EXSquaredTestApp/SecureAPIKeys/Secrets.xcconfig
+++ b/EXSquaredTestApp/EXSquaredTestApp/SecureAPIKeys/Secrets.xcconfig
@@ -7,6 +7,6 @@
 
 // Configuration settings file format documentation can be found at:
 // https://help.apple.com/xcode/#/dev745c5c974
-BASE_URL= https:/$()/api.thecatapi.com/v1/
-API_KEY= live_m1fWbID5o7yaDpBcOSsNOCNbfyYInELyHqspc1g4vW4mjCCN9VeGamxn8zZlfM0d
-IMAGE_BASE_URL= https:/$()/cdn2.thecatapi.com/images/
+BASE_URL=
+API_KEY=
+IMAGE_BASE_URL=
